; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/phy/extr_phy.c_usb_phy_set_default_current.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/phy/extr_phy.c_usb_phy_set_default_current.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_phy = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32, i32, i32, i32, i32, i32 }

@DEFAULT_SDP_CUR_MIN = common dso_local global i32 0, align 4
@DEFAULT_SDP_CUR_MAX = common dso_local global i32 0, align 4
@DEFAULT_DCP_CUR_MIN = common dso_local global i32 0, align 4
@DEFAULT_DCP_CUR_MAX = common dso_local global i32 0, align 4
@DEFAULT_CDP_CUR_MIN = common dso_local global i32 0, align 4
@DEFAULT_CDP_CUR_MAX = common dso_local global i32 0, align 4
@DEFAULT_ACA_CUR_MIN = common dso_local global i32 0, align 4
@DEFAULT_ACA_CUR_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_phy*)* @usb_phy_set_default_current to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @usb_phy_set_default_current(%struct.usb_phy* %0) #0 {
  %2 = alloca %struct.usb_phy*, align 8
  store %struct.usb_phy* %0, %struct.usb_phy** %2, align 8
  %3 = load i32, i32* @DEFAULT_SDP_CUR_MIN, align 4
  %4 = load %struct.usb_phy*, %struct.usb_phy** %2, align 8
  %5 = getelementptr inbounds %struct.usb_phy, %struct.usb_phy* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 7
  store i32 %3, i32* %6, align 4
  %7 = load i32, i32* @DEFAULT_SDP_CUR_MAX, align 4
  %8 = load %struct.usb_phy*, %struct.usb_phy** %2, align 8
  %9 = getelementptr inbounds %struct.usb_phy, %struct.usb_phy* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 6
  store i32 %7, i32* %10, align 4
  %11 = load i32, i32* @DEFAULT_DCP_CUR_MIN, align 4
  %12 = load %struct.usb_phy*, %struct.usb_phy** %2, align 8
  %13 = getelementptr inbounds %struct.usb_phy, %struct.usb_phy* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 5
  store i32 %11, i32* %14, align 4
  %15 = load i32, i32* @DEFAULT_DCP_CUR_MAX, align 4
  %16 = load %struct.usb_phy*, %struct.usb_phy** %2, align 8
  %17 = getelementptr inbounds %struct.usb_phy, %struct.usb_phy* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 4
  store i32 %15, i32* %18, align 4
  %19 = load i32, i32* @DEFAULT_CDP_CUR_MIN, align 4
  %20 = load %struct.usb_phy*, %struct.usb_phy** %2, align 8
  %21 = getelementptr inbounds %struct.usb_phy, %struct.usb_phy* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 3
  store i32 %19, i32* %22, align 4
  %23 = load i32, i32* @DEFAULT_CDP_CUR_MAX, align 4
  %24 = load %struct.usb_phy*, %struct.usb_phy** %2, align 8
  %25 = getelementptr inbounds %struct.usb_phy, %struct.usb_phy* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 2
  store i32 %23, i32* %26, align 4
  %27 = load i32, i32* @DEFAULT_ACA_CUR_MIN, align 4
  %28 = load %struct.usb_phy*, %struct.usb_phy** %2, align 8
  %29 = getelementptr inbounds %struct.usb_phy, %struct.usb_phy* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 1
  store i32 %27, i32* %30, align 4
  %31 = load i32, i32* @DEFAULT_ACA_CUR_MAX, align 4
  %32 = load %struct.usb_phy*, %struct.usb_phy** %2, align 8
  %33 = getelementptr inbounds %struct.usb_phy, %struct.usb_phy* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  store i32 %31, i32* %34, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
